Fixed table overflow error

--- a/src/hoc/splash_screen.css
+++ b/src/hoc/splash_screen.css
@@ -24,6 +24,7 @@ h2 {
     overflow: hidden;
     white-space: no-wrap;
     text-overflow: ellipsis;
+    text-align: center;
 
     /* @media screen and (max-width: 365px) {
         font-size: 11px;
